[gd_scene load_steps=20 format=3 uid="uid://dp2l0p8ckc8t"]

[ext_resource type="Texture2D" uid="uid://d4jskmrgigeoe" path="res://art/object/dummy-inv.png" id="1"]
[ext_resource type="Shader" uid="uid://cpufdiocgwhyy" path="res://art/shaders/fade.tres" id="2"]
[ext_resource type="Texture2D" uid="uid://c8whgbjdd2n4l" path="res://art/locations/pumpsup-int.png" id="3"]
[ext_resource type="Script" path="res://scripts/PumpsUp-Int.gd" id="4"]
[ext_resource type="Script" path="res://scripts/Input.gd" id="5"]
[ext_resource type="StyleBox" path="res://styles/MainText.tres" id="6"]
[ext_resource type="FontFile" path="res://fonts/MainFontItalic.tres" id="7"]
[ext_resource type="FontFile" path="res://fonts/MainFont.tres" id="8"]
[ext_resource type="FontFile" path="res://fonts/MainFontBold.tres" id="9"]
[ext_resource type="FontFile" path="res://fonts/MainFontBoldItalic.tres" id="10"]
[ext_resource type="Texture2D" uid="uid://b5uccdgn2uer0" path="res://art/actors/toyman.png" id="11"]
[ext_resource type="Texture2D" uid="uid://btsiwicicu32v" path="res://art/actors/couple-small.png" id="12"]
[ext_resource type="Texture2D" uid="uid://xs3hcky3pskx" path="res://art/actors/couple-smile.png" id="13"]
[ext_resource type="Texture2D" uid="uid://bkgx61wbj1jj7" path="res://art/actors/gunman-small-light.png" id="14"]
[ext_resource type="Texture2D" uid="uid://o5mws8eaivin" path="res://art/actors/gunman.png" id="15"]
[ext_resource type="Texture2D" uid="uid://bu4fioxtegd6u" path="res://art/misc/crack1.png" id="16"]
[ext_resource type="Texture2D" uid="uid://b5r4mlvnm5k8m" path="res://art/misc/crack2.png" id="17"]

[sub_resource type="ShaderMaterial" id="2"]
shader = ExtResource("2")
shader_parameter/desaturation_strength = 1.0
shader_parameter/darkness = 0.25

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0, 0, 0, 1)

[node name="PumpsUp-Int" type="Node2D"]
script = ExtResource("4")

[node name="MainWindow" type="Node2D" parent="."]

[node name="Backdrop" type="ColorRect" parent="MainWindow"]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="LocationImage" type="TextureRect" parent="MainWindow"]
material = SubResource("2")
offset_top = 40.0
offset_right = 1280.0
offset_bottom = 680.0
mouse_filter = 0
texture = ExtResource("3")
stretch_mode = 6

[node name="SmallCouple" type="TextureRect" parent="MainWindow/LocationImage"]
visible = false
layout_mode = 0
offset_left = 725.0
offset_top = 141.0
offset_right = 857.0
offset_bottom = 399.0
texture = ExtResource("12")

[node name="SmallRobber" type="TextureRect" parent="MainWindow/LocationImage"]
visible = false
layout_mode = 0
offset_left = 763.0
offset_top = 144.0
offset_right = 863.0
offset_bottom = 425.0
texture = ExtResource("14")

[node name="Glass" type="Control" parent="MainWindow/LocationImage"]
clip_contents = true
anchors_preset = 0
offset_left = 60.0
offset_top = 60.0
offset_right = 1183.0
offset_bottom = 473.0

[node name="Couple" type="TextureRect" parent="MainWindow/LocationImage/Glass"]
visible = false
show_behind_parent = true
layout_mode = 0
offset_left = 548.0
offset_top = 4.0
offset_right = 1021.0
offset_bottom = 592.0
texture = ExtResource("13")

[node name="Robber" type="TextureRect" parent="MainWindow/LocationImage/Glass"]
visible = false
layout_mode = 0
offset_left = 580.0
offset_right = 922.0
offset_bottom = 581.0
texture = ExtResource("15")

[node name="Crack1" type="TextureRect" parent="MainWindow/LocationImage/Glass"]
visible = false
layout_mode = 0
offset_left = 355.0
offset_top = 10.0
offset_right = 815.0
offset_bottom = 356.0
texture = ExtResource("16")

[node name="Crack2" type="TextureRect" parent="MainWindow/LocationImage/Glass"]
visible = false
layout_mode = 0
offset_left = 580.0
offset_top = 170.0
offset_right = 1040.0
offset_bottom = 516.0
texture = ExtResource("17")

[node name="Interactives" type="Node2D" parent="MainWindow/LocationImage"]

[node name="Exit" type="Container" parent="MainWindow/LocationImage/Interactives"]
offset_left = 1216.0
offset_top = -38.0
offset_right = 1278.0
offset_bottom = 681.0

[node name="Exit2" type="Container" parent="MainWindow/LocationImage/Interactives"]
offset_left = 3.0
offset_top = -39.0
offset_right = 56.0
offset_bottom = 680.0

[node name="Exit3" type="Container" parent="MainWindow/LocationImage/Interactives"]
offset_left = 3.0
offset_top = 642.0
offset_right = 1282.0
offset_bottom = 680.0

[node name="Exit4" type="Container" parent="MainWindow/LocationImage/Interactives"]
offset_left = 1.0
offset_top = -38.0
offset_right = 1280.0
offset_bottom = 7.0

[node name="StoreFloor" type="Container" parent="MainWindow/LocationImage/Interactives"]
offset_left = 64.0
offset_top = 55.0
offset_right = 1190.0
offset_bottom = 476.0

[node name="Register" type="Container" parent="MainWindow/LocationImage/Interactives"]
offset_left = 849.0
offset_top = 486.0
offset_right = 1030.0
offset_bottom = 542.0

[node name="Shelf" type="Container" parent="MainWindow/LocationImage/Interactives"]
offset_left = 418.0
offset_top = 567.0
offset_right = 624.0
offset_bottom = 637.0

[node name="Asprins" type="Container" parent="MainWindow/LocationImage/Interactives"]
offset_left = 199.0
offset_top = 483.0
offset_right = 399.0
offset_bottom = 543.0

[node name="Safe" type="Container" parent="MainWindow/LocationImage/Interactives"]
offset_left = 192.0
offset_top = 550.0
offset_right = 402.0
offset_bottom = 641.0

[node name="Bin" type="Container" parent="MainWindow/LocationImage/Interactives"]
offset_left = 678.0
offset_top = 567.0
offset_right = 1089.0
offset_bottom = 641.0

[node name="BigBlocker" type="Container" parent="MainWindow/LocationImage/Interactives"]
visible = false
offset_top = -37.0
offset_right = 1279.0
offset_bottom = 679.0

[node name="SmallBlocker" type="Container" parent="MainWindow/LocationImage/Interactives"]
visible = false
offset_left = 60.0
offset_top = 21.0
offset_right = 1196.0
offset_bottom = 645.0

[node name="Man" type="TextureRect" parent="MainWindow/LocationImage"]
visible = false
layout_mode = 0
offset_left = 880.0
offset_top = 38.0
offset_right = 1142.0
offset_bottom = 300.0
texture = ExtResource("11")

[node name="Overlay" type="Node2D" parent="MainWindow"]

[node name="MainText" type="Panel" parent="MainWindow/Overlay"]
visible = false
offset_left = 140.0
offset_top = 400.0
offset_right = 1140.0
offset_bottom = 621.0
theme_override_styles/panel = ExtResource("6")

[node name="Body" type="RichTextLabel" parent="MainWindow/Overlay/MainText"]
layout_mode = 0
offset_left = 15.0
offset_top = 10.0
offset_right = 500.0
offset_bottom = 111.0
scale = Vector2(2, 2)
theme_override_fonts/normal_font = ExtResource("8")
theme_override_fonts/bold_font = ExtResource("9")
theme_override_fonts/italics_font = ExtResource("7")
theme_override_fonts/bold_italics_font = ExtResource("10")
bbcode_enabled = true
scroll_active = false

[node name="ChoiceLabel" type="RichTextLabel" parent="MainWindow/Overlay/MainText"]
visible = false
layout_mode = 0
offset_left = 3.0
offset_top = 5.0
offset_right = 997.0
offset_bottom = 47.0
scale = Vector2(2, 2)
theme_override_fonts/normal_font = ExtResource("8")
bbcode_enabled = true
text = "[You:]"

[node name="Choices" type="Container" parent="MainWindow/Overlay/MainText"]
visible = false
layout_mode = 0
offset_right = 1000.0
offset_bottom = 222.0

[node name="Choice0" type="RichTextLabel" parent="MainWindow/Overlay/MainText/Choices"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("8")
theme_override_fonts/bold_font = ExtResource("9")
bbcode_enabled = true

[node name="Choice1" type="RichTextLabel" parent="MainWindow/Overlay/MainText/Choices"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("8")
theme_override_fonts/bold_font = ExtResource("9")
bbcode_enabled = true

[node name="Choice2" type="RichTextLabel" parent="MainWindow/Overlay/MainText/Choices"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("8")
bbcode_enabled = true

[node name="Choice3" type="RichTextLabel" parent="MainWindow/Overlay/MainText/Choices"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("8")
bbcode_enabled = true

[node name="Command" type="Panel" parent="MainWindow/Overlay"]
visible = false
offset_left = 140.0
offset_top = 647.0
offset_right = 1140.0
offset_bottom = 699.0
theme_override_styles/panel = ExtResource("6")

[node name="TextEdit" type="LineEdit" parent="MainWindow/Overlay/Command"]
clip_contents = true
layout_mode = 0
offset_left = 15.0
offset_top = 5.0
offset_right = 505.0
offset_bottom = 24.0
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("8")
theme_override_styles/normal = SubResource("1")
max_length = 47
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
caret_blink = true
script = ExtResource("5")

[node name="ItemText" type="Panel" parent="MainWindow/Overlay"]
visible = false
offset_left = 340.0
offset_top = 177.0
offset_right = 940.0
offset_bottom = 524.0
theme_override_styles/panel = ExtResource("6")

[node name="ItemImage" type="TextureRect" parent="MainWindow/Overlay/ItemText"]
layout_mode = 0
offset_left = 200.0
offset_top = 36.0
offset_right = 400.0
offset_bottom = 216.0
texture = ExtResource("1")
stretch_mode = 6

[node name="ItemBody" type="RichTextLabel" parent="MainWindow/Overlay/ItemText"]
layout_mode = 0
offset_left = 14.0
offset_top = 257.0
offset_right = 298.0
offset_bottom = 297.0
scale = Vector2(2, 2)
theme_override_fonts/normal_font = ExtResource("8")
text = "You got an item.aaaaaaaaaaaa
Great for certain stuff."
scroll_active = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="gui_input" from="MainWindow/LocationImage/Interactives/Exit" to="." method="_on_Exit_gui_input"]
[connection signal="mouse_entered" from="MainWindow/LocationImage/Interactives/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/LocationImage/Interactives/Exit" to="." method="_on_Exit_mouse_exited"]
[connection signal="tree_exited" from="MainWindow/LocationImage/Interactives/Exit" to="." method="_on_Exit_tree_exited"]
[connection signal="gui_input" from="MainWindow/LocationImage/Interactives/Exit2" to="." method="_on_Exit_gui_input"]
[connection signal="mouse_entered" from="MainWindow/LocationImage/Interactives/Exit2" to="." method="_on_Exit_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/LocationImage/Interactives/Exit2" to="." method="_on_Exit_mouse_exited"]
[connection signal="tree_exited" from="MainWindow/LocationImage/Interactives/Exit2" to="." method="_on_Exit_tree_exited"]
[connection signal="gui_input" from="MainWindow/LocationImage/Interactives/Exit3" to="." method="_on_Exit_gui_input"]
[connection signal="mouse_entered" from="MainWindow/LocationImage/Interactives/Exit3" to="." method="_on_Exit_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/LocationImage/Interactives/Exit3" to="." method="_on_Exit_mouse_exited"]
[connection signal="tree_exited" from="MainWindow/LocationImage/Interactives/Exit3" to="." method="_on_Exit_tree_exited"]
[connection signal="gui_input" from="MainWindow/LocationImage/Interactives/Exit4" to="." method="_on_Exit_gui_input"]
[connection signal="mouse_entered" from="MainWindow/LocationImage/Interactives/Exit4" to="." method="_on_Exit_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/LocationImage/Interactives/Exit4" to="." method="_on_Exit_mouse_exited"]
[connection signal="tree_exited" from="MainWindow/LocationImage/Interactives/Exit4" to="." method="_on_Exit_tree_exited"]
[connection signal="gui_input" from="MainWindow/LocationImage/Interactives/StoreFloor" to="." method="_on_StoreFloor_gui_input"]
[connection signal="gui_input" from="MainWindow/LocationImage/Interactives/Register" to="." method="_on_Register_gui_input"]
[connection signal="gui_input" from="MainWindow/LocationImage/Interactives/Shelf" to="." method="_on_Shelf_gui_input"]
[connection signal="gui_input" from="MainWindow/LocationImage/Interactives/Asprins" to="." method="_on_Asprins_gui_input"]
[connection signal="gui_input" from="MainWindow/LocationImage/Interactives/Safe" to="." method="_on_Safe_gui_input"]
[connection signal="gui_input" from="MainWindow/LocationImage/Interactives/Bin" to="." method="_on_Bin_gui_input"]
[connection signal="gui_input" from="MainWindow/Overlay/MainText/Choices/Choice0" to="." method="_on_Choice0_gui_input"]
[connection signal="mouse_entered" from="MainWindow/Overlay/MainText/Choices/Choice0" to="." method="_on_Choice0_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/Overlay/MainText/Choices/Choice0" to="." method="_on_Choice0_mouse_exited"]
[connection signal="gui_input" from="MainWindow/Overlay/MainText/Choices/Choice1" to="." method="_on_Choice1_gui_input"]
[connection signal="mouse_entered" from="MainWindow/Overlay/MainText/Choices/Choice1" to="." method="_on_Choice1_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/Overlay/MainText/Choices/Choice1" to="." method="_on_Choice1_mouse_exited"]
[connection signal="gui_input" from="MainWindow/Overlay/MainText/Choices/Choice2" to="." method="_on_Choice2_gui_input"]
[connection signal="mouse_entered" from="MainWindow/Overlay/MainText/Choices/Choice2" to="." method="_on_Choice2_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/Overlay/MainText/Choices/Choice2" to="." method="_on_Choice2_mouse_exited"]
[connection signal="gui_input" from="MainWindow/Overlay/Command/TextEdit" to="MainWindow/Overlay/Command/TextEdit" method="_on_TextEdit_gui_input"]
